libs/toolkit-macros-tests/tests/ui/fail/duplicate_name.rs
use toolkit_macros::module;

#[module(name="a", name="b", capabilities=[stateful])]
pub struct X;

fn main() {}
